updated index.html with emergency fix

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@ style="width:100%;max-width:960px"></div>
 style="width:100%;max-width:960px"></div>
 <div><img src="img_hello_world.jpg" alt="Hello World from Space"
 style="width:100%;max-width:960px"></div>
+asdasd
 </body>
 </html>
